--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "demo-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.17.6"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
